--- a/styles/style.css
+++ b/styles/style.css
@@ -94,6 +94,15 @@ svg{
     }
 }
 
+.search-google-logo{
+    width: 100%;
+}
+
+.search-google-logo img{
+    width: 70%;
+    max-width: 272px;
+}
+
 .search-form{
     width: 100%;
     padding: 1.5rem;
